# rlm

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE.md.example  LICENSE  README.md  ROADMAP.md  WORLD.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: README.md  check-file-size.sh  rlm-suggest.json
.claude/skills/rlm/: SKILL.md
docs/: arxiv-2512.24601-recursive-language-models.md  arxiv-2512.24601v1-extracted.md  conversation.md  plan-deeper-recursion.md
src/: rlm_mcp_server.py  server.py
tests/: __init__.py  test_security.py  test_server.py
